crates/sgf-core/tests/snapshots/ops_spawn_reserve/release_ai.snap
---
source: crates/sgf-core/tests/ops_spawn_reserve.rs
expression: "report(&session, &result)"
---
Released system 1's reservation
inverse: SetSpawnReservation { id: 1, reserve: Some(Ai) }

--- scenario
+++ scenario
@@ -1,4 +1,4 @@
 static_galaxy_scenario = {
 	name = "sgf_shapes"
-	system = { id = "1" name = "AI only" position = { x = 0 y = 0 }          initializer = custom_starting_init_01          spawn_weight = { base = 1 modifier = { factor = 0 is_ai = no } } }
+	system = { id = "1" name = "AI only" position = { x = 0 y = 0 }          initializer = custom_starting_init_01          spawn_weight = { base = 1 } }
 }
