crates/sgf-core/tests/snapshots/ops_spawn_reserve/reserve_9.snap
---
source: crates/sgf-core/tests/ops_spawn_reserve.rs
expression: "report(&session, &result)"
---
Reserved system 9 for a human player
inverse: SetSpawnReservation { id: 9, reserve: None }

--- scenario
+++ scenario
@@ -48,7 +48,7 @@
 			log = "Success system [This.GetName]"
 		}
 	}
-	system = { id = "9" name = "Lonely" position = { x = -90 y = 90 } }
+	system = { id = "9" name = "Lonely" position = { x = -90 y = 90 } spawn_weight = { base = 1 modifier = { factor = 0 is_ai = yes } } }
 	system = { id = "512" name = "Flagged" position = { x = 70 y = -20 } initializer = misc_system_init_02 spawn_weight = { modifier = { add = 10000 has_country_flag = sgf_grammar } } }
 	system = { id = "888" name = "Reserved" position = { x = 90 y = -60 } initializer = custom_starting_init_01 spawn_weight = { base = 1 modifier = { factor = 0 is_ai = yes } } }
