crates/sgf-core/tests/snapshots/ops_spawn_reserve/reserve_ai_3018.snap
---
source: crates/sgf-core/tests/ops_spawn_reserve.rs
expression: "report(&session, &result)"
---
Reserved system 3018 for the AI
inverse: SetSpawnReservation { id: 3018, reserve: None }

--- scenario
+++ scenario
@@ -43,7 +43,7 @@
 		name = "Iridonia"
 		position = { x = 40 y = 75 }
 		initializer = random_empire_init_01
-		spawn_weight = { base = 1 }
+		spawn_weight = { base = 1 modifier = { factor = 0 is_ai = no } }
 		effect = {
 			log = "Success system [This.GetName]"
 		}
